new with login and signup form

--- a/stylelogin.css
+++ b/stylelogin.css
@@ -67,7 +67,7 @@ box-shadow: 2px 2px 5px rgb(0, 0, 0);
     color: rgb(81, 85, 87);
 }
 
-.bottom-btn{
+.bottombutton{
     position: absolute;
     width: 34rem;
     height: 4rem;
